# resume-formatter

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_resolution_service.py  update_models_and_schemas.sh
Docs/: CVML_SPECIFICATION.md  DOC.md  todo.md
SampleData/templates/: template_1_Software_Engineer.docx  template_2_Data_Analyst.docx  template_3_Mechanical_Engineer.docx  template_4_Healthcare_Consultant.docx  template_5_Digital_Marketing_Specialist.docx
app/adapters/: base.py
app/adapters/impls/aws/: document_parser.py
app/agent/: graph.py
app/api/: a2a.py  mcp.py  runtime.py
backend/: .gitignore  README.md  analyze_last_job.py  analyze_template.py  init_db.py  pyproject.toml  test_admin_imports.py  test_imports.py  worker.py
backend/app/: config.py  dependencies.py  main.py
backend/app/adapters/: base.py
backend/app/adapters/embedding/: local_embedding.py
backend/app/adapters/events/: local_bus.py
backend/app/adapters/extraction/: router_extraction_adapter.py
backend/app/adapters/impls/aws/: llm_runtime.py
backend/app/adapters/impls/azure/: document_parser.py  llm_runtime.py
backend/app/adapters/impls/gcp/: document_parser.py  llm_runtime.py
backend/app/adapters/impls/ibm/: document_parser.py
backend/app/adapters/impls/local/: document_parser.py  gemini_runtime.py  job_repository.py  llm_runtime.py  local_queue.py  template_repository.py
backend/app/adapters/llm/: aws_bedrock_runtime.py  azure_openai_runtime.py  gcp_vertex_runtime.py  gemini_runtime.py  ollama_runtime.py
backend/app/adapters/parsers/: aws_textract_parser.py  azure_document_intelligence_parser.py  docling_parser.py  ibm_watson_parser.py  tika_parser.py
backend/app/adapters/repositories/: job_repository.py  template_governance_repository.py  template_repository.py
backend/app/adapters/storage/: azure_storage.py  gcp_storage.py  local_storage.py  s3_storage.py
backend/app/adapters/vector/: chroma_index.py  in_memory_index.py  qdrant_index.py
backend/app/agent/: graph.py  prompt_manager.py  state.py
backend/app/agent/nodes/: formatter_resume_node.py  render.py  summarize_node.py  template_resolution_node.py  template_resolve.py  transform.py  transform_nodes.py  transformation_node.py  triage_node.py  validate.py  validation_node.py
backend/app/agent/prompts/: PROMPTS_GUIDE.md  context_aware_extraction.jinja2  data_linearization.jinja2  resume_summary.jinja2  template_analysis.jinja2  validation.jinja2
backend/app/agent/prompts/analysis/: template_analysis.jinja2  template_analysis_system.jinja2
backend/app/agent/prompts/classification/: document_classification.jinja2  document_classification_system.jinja2
backend/app/agent/prompts/extraction/: context_aware_extraction.jinja2  context_aware_extraction_system.jinja2
backend/app/agent/prompts/linearization/: data_linearization.jinja2  data_linearization_system.jinja2  field_polish.jinja2  field_polish_system.jinja2
backend/app/agent/prompts/summary/: overall_summary.jinja2  overall_summary_system.jinja2  resume_summary_system.jinja2
backend/app/agent/prompts/validation/: validation.jinja2  validation_system.jinja2
backend/app/agent/utils/: llm_sanitizer.py
backend/app/api/: a2a.py  admin.py  mcp.py  processing.py  runtime.py
backend/app/core/: worker.py
backend/app/db/: models.py  session.py
backend/app/domain/interfaces/: __init__.py  document_extraction.py  document_parser.py  embedding.py  llm.py  privacy.py
backend/app/schemas/: admin.py  enums.py  events.py  job.py  parsed_document.py  parser_events.py  resume.py  runtime.py  template.py
backend/app/services/: audit_service.py  extraction_service_adapter.py  hybrid_template_ranker.py  parse_confidence_service.py  parser_router.py  resume_ai_service.py  resume_generator_service.py  resume_ingestion_service.py  resume_parsing_service.py  resume_workflow_service.py  schema_inference_engine.py  section_render_engine.py  template_analysis_service.py  template_lookup_service.py  template_publish_guard.py  template_render_planner.py  template_resolution_service.py  template_service.py
backend/app/utils/: __init__.py  validators.py
backend/config/: config.aws.yaml  config.yaml
backend/docker/: Dockerfile  docker-compose.yml
backend/docs/: ARCHITECTURE.md  CLOUD_SERVICES.md
backend/scripts/: ingest_template_smart.py  template_analysis_runner.py  test_llm_pipeline.py
backend/tests/: test_admin_pipeline_flow.py
backend/tests/contract/parsers/: test_parser_contracts.py
backend/tests/golden_files/: test_golden_fixtures.py
backend/tests/unit/: test_admin_api.py  test_llm_adapters.py  test_ollama_runtime.py  test_runtime_api.py  test_template_analysis.py
backend/tests/unit/parsers/: test_parse_confidence_service.py  test_parser_router.py
config/: config.azure.yaml  config.gcp.yaml  config.hybrid.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  resume_processing_architecture_analysis.md
frontend/: angular.json  package-lock.json  package.json  playwright.config.ts  playwright.full.config.ts  proxy.conf.json
frontend/e2e/: failure-paths.spec.ts  happy-path-full.spec.ts
frontend/playwright-report/: index.html
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/admin/: admin.component.html  (+3 more)
resume_formatter/: __init__.py  cli.py  pipeline.py
resume_formatter/agents/: __init__.py  extraction_agent.py  normalization_agent.py  privacy_agent.py  template_agent.py  validation_agent.py
resume_formatter/models/: __init__.py  resume.py
resume_formatter/templates/: classic.html.j2  minimal.md.j2  modern.html.j2
tests/: __init__.py  test_extraction.py  test_normalization.py  test_pipeline.py  test_privacy.py  test_template.py  test_validation.py
(+52 files in other folders)
