[project]
name = "agentic-document-platform"
version = "0.1.0"
description = "A Template-aware, privacy-governed, agentic document processing platform"
authors = [
    {name = "Jules",email = "jules@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "langgraph (>=1.1.4,<2.0.0)",
    "langchain-core (>=1.2.23,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
aws = [
    "boto3 (>=1.36.0,<2.0.0)"
]
azure = [
    "azure-ai-documentintelligence (>=1.0.0b1,<2.0.0)"
]
gcp = [
    "google-cloud-documentai (>=3.0.0,<4.0.0)"
]
ibm = [
    "docling (>=0.1.0,<1.0.0)"
]
local = [
    "tika (>=2.6.0,<3.0.0)"
]
